Updated configurations for zsh, kitty and git

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # vim:fileencoding=utf-8:foldmethod=marker
-include ./theme.conf
+include ./current-theme.conf
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
@@ -971,7 +971,7 @@ tab_bar_background #003747
 
 #: The foreground and background colors.
 
-background_opacity 0.95
+background_opacity 0.90
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -992,7 +992,7 @@ background_opacity 0.95
 #: this option when reloading the config will only work if
 #: dynamic_background_opacity was enabled in the original config.
 
-background_image /home/anamaya/Downloads/1224112.png
+background_image /home/yato/Downloads/1294035.png
 
 #: Path to a background image. Must be in PNG format.
 
